janack-overflow/src/main/java/com/example/janackoverflow/error/domain/request/InputAccountRequestDTO.java
package com.example.janackoverflow.error.domain.request;

public class InputAccountRequestDTO {
}
